# tgl

./: .env.example  .gitignore  CLAUDE.md  README.md  patreon_to_spotify.py  pyproject.toml  tgl.py
src/guestlistr/: __init__.py  cache.py  cli.py  fetcher.py  models.py  search.py  spotify.py  state.py
src/tgl/: __init__.py  cache.py  search.py  spotify.py
tests/: test_classification.py  test_parser.py
tgl/: __init__.py  analysis.py  cache.py  cli.py  config.py  cover.py  fetcher.py  models.py  paths.py  search.py  spotify.py  state.py  transcribe.py  transcribe_ui.py
