[project]
name = "tgl"
version = "0.1.0"
description = "TGL (The Guestlist) Podcast CLI Tool - Manage episodes, tracklists, and Spotify playlists"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser==6.0.11",
    "spotipy==2.24.0",
    "requests==2.31.0",
    "rich==13.7.1",
    "typer==0.15.3",
    "click==8.1.7",
    "pydantic==2.10.5",
    "pydantic-settings==2.6.1",
    "whoosh==2.7.4",
    "platformdirs>=4.0.0",
    "tomli-w>=1.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[project.scripts]
tgl = "tgl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tgl"]
